--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "practice-cli",
   "bin": {
-    "practice": "./index.js"
+    "practice": "./dist/index.js"
   },
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
+    "link-cli": "yarn --global unlink practice-cli | yarn --global link",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc -w"
+    "build": "tsc",
+    "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^24.0.1",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "commander": "^14.0.0"
   }
 }
