--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "_version": "22.0.0",
   "compilerOptions": {
     "lib": ["es2023"],
+    "outDir": "dist",
     "module": "node16",
     "target": "es2022",
     "strict": true,
