--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "commander": "^14.0.0"
+    "chalk": "^5.4.1",
+    "chalk-animation": "^2.0.3",
+    "commander": "^14.0.0",
+    "figlet": "^1.8.1",
+    "gradient-string": "^3.0.0",
+    "inquirer": "^12.6.3",
+    "nanospinner": "^1.2.2"
   }
 }
