--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "version": "0.0.1",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "link-cli": "yarn --global unlink practice-cli | yarn --global link",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,6 +17,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/chalk-animation": "^1.6.3",
+    "@types/figlet": "^1.7.0",
     "@types/node": "^24.0.1",
     "typescript": "^5.8.3"
   },
